@@ -1,0 +1,1 @@
+DOCKER_REGISTRY=docker-registry.greenbytes.de
